# PCC-RPG

./: CMakeLists.txt  README.md  RPG.cpp  RPG.h  SFMLApp  area.cpp  area.h  character.cpp  character.h  enemy.cpp  enemy.h  main.cpp  map.cpp  merchant.h  player.cpp  textPieces.cpp  textPieces.h
GameFiles/: README_gamefiles.txt  Thumbnail.cpp
RPGFiles/: RPGFiles_readme.txt  libraryCalls.h  map.h  merchant.cpp  player.h
RPGFiles/player_Resources/: README_playerResources.txt  exp.cpp  exp.h  healthPotion.cpp  healthPotion.h
RPGFiles/resources/: README_resources.txt  textSentences.txt
RPGFiles/sprite_Class/: sprites.cpp  sprites.h
RPGFiles/stats_Character/: README_stats.txt  stat.cpp  stat.h
